# py-noodle

./: .cloc.ignore  .env.example  .gitignore  .gitmodules  README.md  main.py  noodle.config.yaml  pyproject.toml
src/pynoodle/: __init__.py  cli.py  config.py  hooks.py  init.py  module_cache.py  noodle.py  scenario.py  schemas.py  utils.py
src/pynoodle/broker/: supervisor.py
src/pynoodle/c2p/: __init__.py
src/pynoodle/endpoints/: __init__.py  dependencies.py  lock.py  node.py  proxy.py  scenario.py  scene.py
src/pynoodle/node/: __init__.py  lock.py  node.py  template.py  treeger.py
src/pynoodle/scenario/: __init__.py  scenario.py
src/pynoodle/scene/: __init__.py  lock.py  scene_node.py  server_template.py  treeger.py
src/pynoodle/schemas/: config.py  dependencies.py  lock.py  node.py  scenario.py  scene.py
src/pynoodle/treeger/: __init__.py  crm.py  icrm.py  itreeger.py  scene_node.py  treeger.py
tests/: local.py  local2.py  noodle.config.yaml  p.test.py  remote.py  remote2.py  remoteA.py  remoteB.py  remote_schema.py  scenario.config.yaml  test2.py
tests/crms/: grid.py  hello.py  names.py  patch.py
tests/crms/hello/: __init__.py  hello.py
tests/crms/names/: __init__.py  endpoint.py  hooks.py  names.py
tests/crms/schema/: __init__.py  hooks.py  schema.py
tests/hello/: __init__.py
tests/icrms/: igrid.py  ihello.py  inames.py  ipatch.py  ischema.py
tests/module/hello/: hello.py
tests/module/names/: hooks.py  names.py
tests/module/src/hello/: hello.py  ihello.py
tests/module/src/names/: __init__.py  inames.py  names.py  setup.py
tests/names/: __init__.py  names.py
