[project]
name = "py-noodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "c-two>=0.2.5",
    "fastapi>=0.116.1",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.0",
]

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "py-noodle",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
py-noodle = { workspace = true }

[build-system]
requires = ["setuptools>=40.8.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"
