[project]
name = "py-noodle"
version = "0.1.1"
description = "Node-oriented open data linking environment powered by C-Two."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "c-two>=0.2.6",
    "fastapi>=0.116.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "py-noodle",
]

[tool.uv.sources]
c-two = { git = "https://github.com/world-in-progress/c-two.git", branch = "main" }
py-noodle = { workspace = true }

[build-system]
requires = ["setuptools>=40.8.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"
